[gd_scene load_steps=18 format=2]

[ext_resource path="res://scenes/ParallaxBackground.tscn" type="PackedScene" id=1]
[ext_resource path="res://sprites/space_base.png" type="Texture" id=2]
[ext_resource path="res://sfx/laser_sound.wav" type="AudioStream" id=3]
[ext_resource path="res://scripts/Main.gd" type="Script" id=4]
[ext_resource path="res://fonts/Ricasso-Regular.otf" type="DynamicFontData" id=5]
[ext_resource path="res://sfx/release_noise.wav" type="AudioStream" id=6]
[ext_resource path="res://sprites/explode_animation/explode 1.PNG" type="Texture" id=7]
[ext_resource path="res://sprites/explode_animation/explode 2.PNG" type="Texture" id=8]
[ext_resource path="res://sprites/explode_animation/explode 3.PNG" type="Texture" id=9]
[ext_resource path="res://sfx/base_explode.wav" type="AudioStream" id=10]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 32 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "explosion"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), null ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 1, 1 ), Vector2( 2, 2 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "spin"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[node name="Main" type="Node2D"]
script = ExtResource( 4 )

[node name="ParallaxBackground" parent="." instance=ExtResource( 1 )]

[node name="Base" type="Sprite" parent="."]
position = Vector2( 400, 300 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="Base"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Base/Area2D"]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Base"]
anims/RESET = SubResource( 3 )
anims/explosion = SubResource( 8 )
anims/spin = SubResource( 4 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Base"]
stream = ExtResource( 6 )

[node name="explode_noise_base" type="AudioStreamPlayer" parent="Base"]
stream = ExtResource( 10 )

[node name="bullet_timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="fire_laser" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="simple_enemy_spawner" type="Timer" parent="."]
autostart = true

[node name="level_timer" type="Timer" parent="."]
wait_time = 30.0
autostart = true

[node name="speed_up" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Score" type="Label" parent="."]
margin_left = 631.0
margin_top = 65.0
margin_right = 689.0
margin_bottom = 89.0
custom_fonts/font = SubResource( 7 )
text = "Test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="fade_rect" type="ColorRect" parent="CanvasLayer"]
pause_mode = 2
margin_right = 828.0
margin_bottom = 632.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/fade_rect"]
anims/RESET = SubResource( 5 )
anims/fade = SubResource( 6 )

[connection signal="area_entered" from="Base/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="animation_finished" from="Base/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="simple_enemy_spawner" to="." method="_on_simple_enemy_spawner_timeout"]
[connection signal="timeout" from="level_timer" to="." method="_on_level_timer_timeout"]
[connection signal="timeout" from="speed_up" to="." method="_on_speed_up_timeout"]
[connection signal="animation_finished" from="CanvasLayer/fade_rect/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
